# XDownloader

./: .gitignore  CMakeLists.txt  README.md  downloadtaskwidget.cpp  downloadtaskwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
